Adds sound visualization

--- a/Commlink/Config/DefaultEngine.ini
+++ b/Commlink/Config/DefaultEngine.ini
@@ -123,3 +123,6 @@ GlobalDefaultGameMode=/Game/Blueprints/CommlinkGameMode_BP.CommlinkGameMode_BP_C
 GameDefaultMap=/Game/Level/MainLevel.MainLevel
 bUseSplitscreen=False
 
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/Audio/ReceivedAudioClass.ReceivedAudioClass
+
