Integrated first batch of sprites, added depth and lighting test to main level.

--- a/Commlink/Config/DefaultEngine.ini
+++ b/Commlink/Config/DefaultEngine.ini
@@ -20,7 +20,7 @@ r.Mobile.AllowSoftwareOcclusion=False
 r.Mobile.VirtualTextures=False
 r.DiscardUnusedQuality=False
 r.AllowOcclusionQueries=True
-r.MinScreenRadiusForLights=0.030000
+r.MinScreenRadiusForLights=0.000000
 r.MinScreenRadiusForDepthPrepass=0.030000
 r.MinScreenRadiusForCSMDepth=0.010000
 r.PrecomputedVisibilityWarning=False
@@ -37,7 +37,7 @@ r.ClearCoatNormal=False
 r.AnisotropicBRDF=False
 r.ReflectionCaptureResolution=128
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
-r.ForwardShading=False
+r.ForwardShading=True
 r.VertexFoggingForOpaque=True
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
