--- a/Commlink/Config/DefaultEngine.ini
+++ b/Commlink/Config/DefaultEngine.ini
@@ -5,3 +5,6 @@ GlobalDefaultGameMode=/Game/Blueprints/CommlinkGameMode_BP.CommlinkGameMode_BP_C
 EditorStartupMap=/Game/Level/MainLevel.MainLevel
 GameDefaultMap=/Game/Level/MainLevel.MainLevel
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
