remove auto exposure

--- a/Commlink/Config/DefaultEngine.ini
+++ b/Commlink/Config/DefaultEngine.ini
@@ -7,4 +7,5 @@ GameDefaultMap=/Game/Level/MainLevel.MainLevel
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
+r.DefaultFeature.AutoExposure=False
 
