--- a/Commlink/Config/DefaultInput.ini
+++ b/Commlink/Config/DefaultInput.ini
@@ -79,6 +79,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="scan",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="confirmfind",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
