- set  AllowOcclusion to false to fix issue with x-ray sprites sometimes not displaying over regular sprites

--- a/Commlink/Config/DefaultEngine.ini
+++ b/Commlink/Config/DefaultEngine.ini
@@ -8,4 +8,5 @@ GameDefaultMap=/Game/Level/MainLevel.MainLevel
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
 r.DefaultFeature.AutoExposure=False
+r.AllowOcclusionQueries=False
 
