WIP Game Over UI, other tweaks

--- a/Commlink/Config/DefaultEngine.ini
+++ b/Commlink/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/CommlinkGameMode_BP.CommlinkGameMode_BP_C
 EditorStartupMap=/Game/Level/MainLevel.MainLevel
-GameDefaultMap=/Game/Level/MainLevel.MainLevel
+GameDefaultMap=/Game/Level/Menu.Menu
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
